Fix search field size issue on Safari

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -134,6 +134,8 @@
             width: 100%;
             border-radius: 5px;
             margin-bottom: 8px;
+            height: auto;
+            padding: 13px;
         }
     }
 
